--- a/css/postcss/header.pcss
+++ b/css/postcss/header.pcss
@@ -18,8 +18,12 @@
 .site-logo {
 	width: 210px;
 	height: 110px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+
 	background-color: #463636;
-	background-image: url(../images/logo.png);
+	color: #fff;
 	background-repeat: no-repeat;
 	background-size: 131px 53px;
   background-position: 50% calc(50% - 5px);
@@ -28,6 +32,9 @@
 	z-index: 1;
   padding-left: 0;
 	margin-top: 0;
+	font-family: 'Alfa Slab One', cursive;
+	font-size: 30px;
+	text-transform: uppercase;
 }
 .main-navigation {
 	font-family: Bebas Neue, sans-serif;
