--- a/css/postcss/tiles/facades-tiles.pcss
+++ b/css/postcss/tiles/facades-tiles.pcss
@@ -1,13 +1,14 @@
 .tile-facades-1 {
 	align-items: center;
-	justify-content: flex-end;
-	padding-right: 5%;
+	justify-content: center;
+	flex-shrink: 0;
 }
 .tile-facades-2 {
 	font-size: 0;
 }
 .tile-facades-3 {
   align-items: center;
+	flex-shrink: 0;
 }
 .tile-facades-3 .tile__content {
 	padding-left: 10%;
@@ -33,6 +34,14 @@
 	font-size: 0;
 }
 
+@media screen and (min-width: 1200px) {
+	.tile-facades-1 {
+		justify-content: flex-end;
+	}
+	.tile-facades-1 .tile-content {
+		padding-right: 14%;
+	}
+}
 @media screen and (min-width: 1280px) {
 	.tile-facades-3 .tile__content {
 		padding-left: 104px;
